@@ -65,7 +65,8 @@ endif
 
 VIEW_IMPLEMENTATION_SOURCES = \
 	view/telnetcon.cpp view/telnetcon.h \
-	view/telnetview.cpp view/telnetview.h
+	view/telnetview.cpp view/telnetview.h \
+	view/forkpty.c view/forkpty.h
 
 if USE_IPLOOKUP
 QQWRYSEEKER_SOURCES = \
